--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "commonjs",
   "devDependencies": {
+    "@types/node": "^24.7.2",
     "tsx": "^4.20.6"
   }
 }
